2005-08-13  Nathaniel Smith  <njs@pobox.com>

	* tests/t_commit_log_writeback.at: New test.
	* testsuite.at: Add it.

2005-08-12  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (commit): When user uses --message or
	--message-file, don't require non-empty logs, and don't write out
	message to MT/log.  (This makes re-running a 'commit -m foo'
	command line until it works possible; otherwise the second try
	will get a 'MT/log non-empty and -m supplied' error.)

2005-08-11  Nathaniel Smith  <njs@pobox.com>

	* netsync.cc: Add a list of ideas for improvement that will break
	network compatibility and thus perhaps should go together.

2005-08-11  Nathaniel Smith  <njs@pobox.com>

	* tests/t_commit_message_file.at: Un-double file contents.

2005-08-11  Nathaniel Smith  <njs@pobox.com>

	* lua.cc (ok, extract_str, extract_int, extract_double)
	(extract_bool): Add more logging.

2005-08-09  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (update): Fix helpful error message to suggest
	_current_ commandline syntax.

2005-08-09  Olivier Andrieu  <oliv__a@users.sourceforge.net>

	* contrib/monotone.el: a couple of fixes spotted by the compiler
	* Changelog, contrib/colorize: utf8ize

2005-08-09  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Put a time in.
	* po/monotone.pot: Regenerate.
	
2005-08-08  Nathaniel Smith  <njs@pobox.com>

	* configure.ac, monotone.spec, debian/changelog:
	* win32/monotone.iss: Bump version number.

2005-08-08  Nathaniel Smith  <njs@pobox.com>

	* UPGRADE: Fix title.
	* NEWS: Add --lca.

2005-08-08  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (merge, propagate): Take --lca.
	* options.hh: Add OPT_LCA.
	* monotone.cc (coptions, cpp_main): Support it it.
	* app_state.{hh,cc} (app_state::usa_lca): New variable.
	* revision.cc (find_common_ancestor_for_merge): Use LCA if user
	passed --lca.
	* tests/t_merge_lca.at: New test.
	* testsuite.at: Add it.
	* monotone.texi (Tree): Document --lca.
	
2005-08-08  Nathaniel Smith  <njs@pobox.com>
